feat: add global blob deduplication
